[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mythic-cognition-runtime"
version = "0.6.0"
description = "Persistent cognition runtime layer for Engram."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "raya" },
]
keywords = ["memory", "agents", "cognition", "runtime", "engram"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/raya-ac/mythic"
Repository = "https://github.com/raya-ac/mythic"
Issues = "https://github.com/raya-ac/mythic/issues"

[project.scripts]
mythic = "mythic.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
engram = [
    "engram-memory-system>=0.5.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mythic"]
